--- a/danh_thiep_ky_su.html
+++ b/danh_thiep_ky_su.html
@@ -184,7 +184,7 @@
                         <div>Tiếng Anh kỹ thuật</div>
                     </div>
                     
-                    <div class="mt-3 text-sm italic">
+                    <div class="mt-3 text-base font-semibold italic">
                       Với tôi, công việc không chỉ là lương – mà là lộ trình trưởng thành cùng đội ngũ. Chỉ cần anh/chị muốn đào tạo, tôi sẵn sàng trở thành bất kỳ kỹ sư nào công ty cần..
                     </div>
                 </div>
