--- a/danh_thiep_ky_su.html
+++ b/danh_thiep_ky_su.html
@@ -132,7 +132,7 @@
     </style>
 </head>
 <body>
-    <div class="card animate-pulse">
+    <div class="card">
         <div class="card-inner">
             <!-- Mặt trước danh thiếp -->
             <div class="card-front">
